--- a/src/final/01/styles.css
+++ b/src/final/01/styles.css
@@ -1,3 +1,52 @@
+/* 使えそうな色 */
+/* https://colorhunt.co/palette/273174 */
+/* #325288 */
+/* #f4eee8 */
+/* #f5cebe */
+/* #114e60 */
+/* #8ab6d6 */
+/* #2978b5 */
+/* #0061a8 */
+
+.container {
+  padding: 20px;
+}
+
+.wrap {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  padding: 10px;
+  border: 2px solid #8ab6d6;
+  border-radius: 5px;
+}
+
 .title {
-  color: blue;
+  color: #325288;
+  font-weight: bold;
+  font-size: 1.8rem;
+  margin-bottom: 10px;
+}
+
+.row {
+  display: flex;
+}
+
+.row-left {
+  display: flex;
+  justify-content: flex-end;
+  width: 100px;
+  margin-right: 10px;
+}
+
+.right {
+  width: 100%;
+  background-color: #2978b5;
+  border-radius: 5px;
 }
