--- a/src/final/01/styles.css
+++ b/src/final/01/styles.css
@@ -9,44 +9,26 @@
 /* #0061a8 */
 
 .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 20px;
+  height: 100vh;
 }
 
 .wrap {
   display: flex;
-  justify-content: space-between;
-  gap: 10px;
-}
-
-.left {
-  display: flex;
-  flex-direction: column;
-  width: 400px;
-  padding: 10px;
-  border: 2px solid #8ab6d6;
+  flex-wrap: wrap;
+  gap: 20px;
+  width: 340px;
+  padding: 20px;
+  background-color: #8ab6d6;
   border-radius: 5px;
 }
 
-.title {
-  color: #325288;
-  font-weight: bold;
-  font-size: 1.8rem;
-  margin-bottom: 10px;
-}
-
-.row {
-  display: flex;
-}
-
-.row-left {
-  display: flex;
-  justify-content: flex-end;
+.box {
   width: 100px;
-  margin-right: 10px;
-}
-
-.right {
-  width: 100%;
+  height: 100px;
   background-color: #2978b5;
   border-radius: 5px;
 }
