--- a/src/start/01/styles.css
+++ b/src/start/01/styles.css
@@ -1,34 +1,28 @@
+/* 使えそうな色 */
+/* https://colorhunt.co/palette/273174 */
+/* #325288 */
+/* #f4eee8 */
+/* #f5cebe */
+/* #114e60 */
+/* #8ab6d6 */
+/* #2978b5 */
+/* #0061a8 */
+
 .container {
   padding: 20px;
+  height: 100vh;
 }
 
 .wrap {
-}
-
-.left {
-  width: 400px;
-  padding: 10px;
-  border: 2px solid #8ab6d6;
+  width: 340px;
+  padding: 20px;
+  background-color: #8ab6d6;
   border-radius: 5px;
 }
 
-.title {
-  color: #325288;
-  font-weight: bold;
-  font-size: 1.8rem;
-  margin-bottom: 10px;
-}
-
-.row {
-}
-
-.row-left {
+.box {
   width: 100px;
-  margin-right: 10px;
-}
-
-.right {
-  width: 100%;
+  height: 100px;
   background-color: #2978b5;
   border-radius: 5px;
 }
