--- a/src/start/03/styles.css
+++ b/src/start/03/styles.css
@@ -4,15 +4,27 @@
 }
 
 .wrap {
-  width: 340px;
   padding: 20px;
   background-color: #8ab6d6;
   border-radius: 5px;
 }
 
-.box {
+.left {
   width: 100px;
-  height: 100px;
+}
+
+.left-box {
+  height: 100%;
+  background-color: #2978b5;
+  border-radius: 5px;
+}
+
+.right {
+  width: 200px;
+}
+
+.right-box {
+  height: 80px;
   background-color: #2978b5;
   border-radius: 5px;
 }
