--- a/src/final/03/styles.css
+++ b/src/final/03/styles.css
@@ -9,40 +9,44 @@
 /* #0061a8 */
 
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 20px;
-  height: 100vh;
 }
 
 .wrap {
   display: flex;
-  gap: 20px;
-  padding: 20px;
-  background-color: #8ab6d6;
-  border-radius: 5px;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .left {
-  width: 100px;
-}
-
-.left-box {
-  height: 100%;
-  background-color: #2978b5;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  padding: 10px;
+  border: 2px solid #8ab6d6;
   border-radius: 5px;
 }
 
-.right {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  width: 200px;
+.title {
+  color: #325288;
+  font-weight: bold;
+  font-size: 1.8rem;
+  margin-bottom: 10px;
 }
 
-.right-box {
-  height: 80px;
+.row {
+  display: flex;
+}
+
+.row-left {
+  display: flex;
+  justify-content: flex-end;
+  width: 100px;
+  margin-right: 10px;
+}
+
+.right {
+  width: 100%;
   background-color: #2978b5;
   border-radius: 5px;
 }
