--- a/src/start/02/styles.css
+++ b/src/start/02/styles.css
@@ -1,34 +1,30 @@
 .container {
   padding: 20px;
+  height: 100vh;
 }
 
 .wrap {
-}
-
-.left {
-  width: 400px;
-  padding: 10px;
-  border: 2px solid #8ab6d6;
+  padding: 20px;
+  background-color: #8ab6d6;
   border-radius: 5px;
 }
 
-.title {
-  color: #325288;
-  font-weight: bold;
-  font-size: 1.8rem;
-  margin-bottom: 10px;
-}
-
-.row {
-}
-
-.row-left {
+.left {
   width: 100px;
-  margin-right: 10px;
+}
+
+.left-box {
+  height: 100%;
+  background-color: #2978b5;
+  border-radius: 5px;
 }
 
 .right {
-  width: 100%;
+  width: 200px;
+}
+
+.right-box {
+  height: 80px;
   background-color: #2978b5;
   border-radius: 5px;
 }
