--- a/src/start/03/styles.css
+++ b/src/start/03/styles.css
@@ -1,30 +1,34 @@
 .container {
   padding: 20px;
-  height: 100vh;
 }
 
 .wrap {
-  padding: 20px;
-  background-color: #8ab6d6;
-  border-radius: 5px;
 }
 
 .left {
-  width: 100px;
-}
-
-.left-box {
-  height: 100%;
-  background-color: #2978b5;
+  width: 400px;
+  padding: 10px;
+  border: 2px solid #8ab6d6;
   border-radius: 5px;
 }
 
-.right {
-  width: 200px;
+.title {
+  color: #325288;
+  font-weight: bold;
+  font-size: 1.8rem;
+  margin-bottom: 10px;
 }
 
-.right-box {
-  height: 80px;
+.row {
+}
+
+.row-left {
+  width: 100px;
+  margin-right: 10px;
+}
+
+.right {
+  width: 100%;
   background-color: #2978b5;
   border-radius: 5px;
 }
